--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
+    "lucide-react-native": "^0.548.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-ratings": "^8.1.0",
