--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~54.0.20",
     "expo-dev-client": "~6.0.16",
     "expo-font": "~14.0.9",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
     "lucide-react-native": "^0.548.0",
